--- a/modules/contentPipeline/front_end/content_types/tab-box/tab-box.css
+++ b/modules/contentPipeline/front_end/content_types/tab-box/tab-box.css
@@ -219,23 +219,3 @@ main > section[content-type="tab-box"] section[content-type="embedding"] {
 [content-type="tab-box"] > inner-content > details > section > p {
 	padding-top: var(--content-padding-half);
 }
-
-@media only screen and (max-width: 1062px) {
-	help-video {
-		left: calc(100% - 3.5em);
-	}
-
-	a.marker {
-		position: relative;
-		display: inline-block;
-		left: 0;
-		margin-top: 0;
-		margin-bottom: 1em;
-	}
-}
-
-@media only screen and (max-width: 650px) {
-	help-video {
-		left: calc(100% - 2.8em);
-	}
-}
